--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 .custom-prev-arrow,
 .custom-next-arrow {
-  background-color: #75b875;
+  background-color: #9ad69a;
   color: black;
   border: none;
   padding: 10px;
@@ -59,4 +59,9 @@ footer {
 /* Общий стиль для полосы прокрутки */
 body {
   font-family: "Montserrat", sans-serif;
+}
+
+.pdd {
+  max-width: 300px;
+  min-height: 80px;
 }
