--- a/src/index.css
+++ b/src/index.css
@@ -206,9 +206,18 @@ body {
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .slider-dots-obj-desk .slick-active button {
   background-color: #9ad69a;
+}
+.normalImg {
+  width: 1000px;
+  height: 500px;
+}
+
+.bgSpinText {
+  background-color: rgba(0, 0, 0, 0.527);
+  color: white;
 }
